Intro: prevent overflows

--- a/theme/static/styles/components/intro.scss
+++ b/theme/static/styles/components/intro.scss
@@ -3,6 +3,7 @@
   display: flex;
   margin-bottom: 2rem;
   max-height: 90vh;
+  width: 100%;
 
   @include mq($from: tablet) {
     min-height: 80vh;
